# ossflow-scrapper-bck

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  instructional_detail.yml
LICENSES/: fish-audio-s2-pro.md
bjj-base/: Dockerfile
bjj_service_kit/: app_factory.py
docs/: SPLIT-NOTES.md
dubbing-generator/: Dockerfile  app.py  pyproject.toml  requirements.txt
dubbing-generator/dubbing_generator/: config.py  pipeline.py
dubbing-generator/model_voices/: dense.py  silences.txt
dubbing-generator/service_tests/: test_config.py  test_s2pro_server_manager.py  test_service_api.py  test_synthesizer_factory.py  test_synthesizer_s2pro.py
dubbing-generator/tests/: test_bjj_casting.py  test_config.py  test_drift_corrector.py  test_lang_split.py  test_process_directory_strict.py  test_synthesizer_elevenlabs.py  test_synthesizer_kokoro.py  test_synthesizer_piper.py  test_synthesizer_xttsv2.py  test_synthesizer_xttsv2_gpu.py
ollama/: entrypoint.sh
processor-api/: requirements.txt
processor-api/api/: app.py  backend_client.py  burn_subs.py  chapters.py  dubbing.py  elevenlabs_dubbing.py  elevenlabs_dubbing_client.py  (+10 more)
subtitle-generator/: Dockerfile  app.py  pyproject.toml
subtitle-generator/subtitle_generator/: config.py  dub_segmenter.py  pipeline.py  segment_regen.py  srt_postprocess.py  translator.py  writer.py
subtitle-generator/tests/: test_translator_ollama.py  test_translator_openai_snapshot.py  test_translator_quality.py
subtitle-generator/tests/data/: bjj_golden_set.jsonl
(+45 files in other folders)
